<resources>
<string name="app_name">Level1Task1</string>
<string name="title">Guess if the next throw is going to be lower, equal or higher.</string>
<string name="higher">Higher</string>
<string name="equals">Equals</string>
<string name="lower">Lower</string>
<string name="dice">Dice</string>
<string name="correct">Correct</string>
<string name="incorrect">Incorrect</string>
    <string name="guess_if_the_next_throw_is_going_to_be_lower_equal_or_higher">Guess if the next throw is going to be lower, equal or higher.</string>
    <string name="textview">TextView</string>
    <string name="todo">TODO</string>
    <string name="last_throw">Last Throw: %d</string>
</resources>